Test: 주문 도메인 테스트 (#179)
* Chore: Swagger 태그에 설명 추가

- 주문 취소 시 환불 로직도 함께 수행되므로 명확성을 위해 설명 추가

* Refactor: OrderStatus를 Order 엔티티 바깥으로 분리

* Refactor: 도메인 로직을 포함하는 엔티티 메서드 이름 변경

* Refactor: 주문 취소 가능 여부를 검증하는 AuthorizationService 리팩토링

- AuthorizationService -> OrderCancelValidator 네이밍 변경
- 패키지 이동 및 주석 수정
- 도메인 로직 검증과 권한 검증 분리

* Refactor: 환불 실패 시 예외 처리 로직 리팩토링

- RefundService의 refund를 환불 성공 여부를 반환하는 tryRefund로 변경
- RefundService의 변경에 따른 OrderCancellationFacade 변경
- OrderControllerTest에 변경 사항 반영

* Refactor: 환불 성공 여부에 따른 상태 변경 메서드 이름 변경

* Refactor: OrderStatus를 변경하는 엔티티 메서드 추가 및 이름 변경

* Refactor: OrderStatusScheduler가 CommandOrderService를 의존하도록 변경

* Feat: OrderStatusScheduler가 10분마다 실행되도록 변경

* Chore: AcceptanceRabbitTest를 AcceptanceTest로 변경

* Remove: 사용하지 않는 메서드 삭제

* Test: 주문 상태를 변경하는 스케줄러 테스트 추가

* Test: 주문 상태를 변경하는 서비스 테스트 추가

* Test: 주문 취소 및 환불을 처리하는 서비스 테스트 추가

* Test: 주문 취소 유효성을 검증하는 서비스 테스트 추가

* Test: 환불을 처리하는 서비스 테스트 추가

* Test: 주문 조회를 처리하는 서비스 테스트 추가

* Test: 주문 통합 테스트 추가